Add category title on products listing page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "product_all": "All Products",
-  "product_mask": "Masks",
-  "product_sanitizer": "Sanitizers",
+  "product_mask": "Mask",
+  "product_sanitizer": "Sanitizer",
   "product_handWash": "Hand Wash",
   "product_gloves": "Gloves",
   "search_placeholder": "Search for products",
