Add cart title in checkout page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
   "product_handWash": "Hand Wash",
   "product_gloves": "Gloves",
   "search_placeholder": "Search for products",
-  "cart": "cart",
+  "cart": "Cart",
   "login": "Login",
   "your": "Your",
   "no_cart_text": "No items in the cart",
